# qhttpengine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md
doc/: CMakeLists.txt  Doxyfile.in  index.md  overrides.css
examples/: CMakeLists.txt
examples/auth/: CMakeLists.txt  client.cpp  server.cpp
examples/chat/: CMakeLists.txt  apihandler.h  main.cpp
examples/chat/static/: index.html
examples/chat/static/css/: style.css
examples/chat/static/js/: chat.js
examples/chatserver/: CMakeLists.txt  apihandler.cpp  apihandler.h  main.cpp
examples/chatserver/static/css/: style.css
examples/chatserver/static/js/: chat.js
examples/fileserver/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/QHttpEngine/: QFilesystemHandler  QHttpBasicAuth  QHttpMiddleware  QHttpRange  QHttpSocket  QIODeviceCopier  QProxyHandler  qfilesystemhandler.h  qhttpbasicauth.h  qhttphandler.h  qhttpmiddleware.h  qhttpparser.h  qhttprange.h  qhttpserver.h  qhttpsocket.h  qibytearray.h  qiodevicecopier.h  qlocalauth.h  qlocalfile.h  qobjecthandler.h  qproxyhandler.h
include/qhttpengine/: basicauthmiddleware.h  filesystemhandler.h  handler.h  ibytearray.h  localauthmiddleware.h  localfile.h  middleware.h  parser.h  proxyhandler.h  qfilesystemhandler.h  qhttpbasicauth.h  qhttphandler.h  qhttpparser.h  qhttprange.h  qhttpserver.h  qhttpsocket.h  qibytearray.h  qiodevicecopier.h  qlocalauth.h  qlocalfile.h  qobjecthandler.h  qproxyhandler.h  range.h  server.h  socket.h
src/: CMakeLists.txt  QFilesystemHandler  QHttpEngine.pc.in  QHttpHandler  QHttpParser  QHttpServer  QHttpSocket  QHttpSubHandler  QIByteArray  QIODeviceCopier  QLocalAuth  QLocalFile  QObjectHandler  QSubHandler  basicauthmiddleware.cpp  basicauthmiddleware_p.h  config.h.in  filesystemhandler.cpp  filesystemhandler_p.h  handler.cpp  handler_p.h  localauthmiddleware.cpp  localauthmiddleware_p.h  localfile.cpp  localfile_p.h  parser.cpp  proxyhandler.cpp  proxyhandler_p.h  proxysocket.cpp  proxysocket.h  qfilesystemhandler.cpp  qfilesystemhandler.h  qfilesystemhandler_p.h  qhttpbasicauth.cpp  qhttpbasicauth_p.h  qhttpengine.cpp  qhttpengine.h  qhttpengine.pc.in  qhttpengine_export.h.in  qhttpengine_global.h.in  (+52 more)
src/QHttpEngine/: qfilesystemhandler.h  qhttphandler.h  qhttpparser.h  qhttpserver.h  qhttpsocket.h  qibytearray.h  qiodevicecopier.h  qlocalfile.h  qobjecthandler.h
src/core/: qhttpheader.h  qhttpserver.cpp  qhttpserver.h  qhttpserver_p.h  qhttpsocket.cpp  qhttpsocket.h  qhttpsocket_p.h
src/handler/: qfilesystemhandler.cpp  qfilesystemhandler.h  qfilesystemhandler_p.h  qhttphandler.h  qobjecthandler.cpp  qobjecthandler.h  qobjecthandler_p.h
src/include/qhttpengine/: basicauthmiddleware.h  filesystemhandler.h  handler.h  ibytearray.h  localauthmiddleware.h  localfile.h  middleware.h  parser.h  proxyhandler.h  qiodevicecopier.h  qobjecthandler.h  range.h  server.h  socket.h
src/src/: filesystemhandler.cpp  handler.cpp  handler_p.h  localauthmiddleware.cpp  localauthmiddleware_p.h  proxyhandler.cpp  proxyhandler_p.h  proxysocket.cpp  proxysocket.h  qiodevicecopier_p.h  qobjecthandler.cpp  qobjecthandler_p.h  range.cpp  range_p.h  server.cpp  socket.cpp  socket_p.h
src/util/: byteutils.cpp  byteutils.h  qhttpparser.cpp  qhttpparser.h  qibytearray.h  qiodevicecopier.cpp
tests/: CMakeLists.txt  TestBasicAuthMiddleware.cpp  TestByteUtils.cpp  TestFilesystemHandler.cpp  TestHandler.cpp  TestLocalAuthMiddleware.cpp  TestMiddleware.cpp  TestProxyHandler.cpp  TestQFilesystemHandler.cpp  TestQHttpBasicAuth.cpp  TestQHttpEngine.cpp  TestQHttpHandler.cpp  TestQHttpMiddleware.cpp  TestQHttpParser.cpp  TestQHttpRange.cpp  TestQHttpRequest.cpp  TestQHttpResponse.cpp  TestQHttpServer.cpp  TestQHttpSocket.cpp  TestQHttpSubHandler.cpp  TestQIByteArray.cpp  TestQIODeviceCopier.cpp  TestQJsonServer.cpp  TestQLocalAuth.cpp  TestQLocalFile.cpp  TestQObjectHandler.cpp  TestQProxyHandler.cpp  TestQSubHandler.cpp  TestServer.cpp  TestSocket.cpp  cert.pem  key.pem
tests/common/: CMakeLists.txt  qiodevicecounter.cpp  qiodevicecounter.h  qsimplehttpclient.cpp  qsimplehttpclient.h  qsocketpair.cpp  qsocketpair.h
tests/core/: TestQHttpServer.cpp  TestQHttpSocket.cpp
tests/handler/: TestQFilesystemHandler.cpp  TestQHttpSubHandler.cpp  TestQObjectHandler.cpp
tests/util/: TestQHttpParser.cpp  TestQIODeviceCopier.cpp
